src/test/ui/issues/issue-5997-struct.stderr
error[E0401]: can't use type parameters from outer function
  --> $DIR/issue-5997-struct.rs:12:14
   |
LL | fn f<T>() -> bool {
   |    - - type variable from outer function
   |    |
   |    try adding a local type parameter in this method instead
LL |     struct S(T); //~ ERROR can't use type parameters from outer function
   |              ^ use of type variable from outer function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0401`.
