src/test/ui/issues/issue-5997-struct.rs
fn f<T>() -> bool {
    struct S(T); //~ ERROR can't use type parameters from outer function

    true
}

fn main() {
    let b = f::<isize>();
    assert!(b);
}
